test/mpi/errors/cxx/errhan/Makefile.sm
INCLUDES = -I../../../include -I${srcdir}/../../../include
DEPADD = @MPILIBLOC@ 
smvar_do_sharedlibs = 0

errsetx_SOURCES   = errsetx.cxx
throwtest_SOURCES = throwtest.cxx

